--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.17.1",
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.12.14"
+  },
+  "engines": {
+    "node": "12.14.1"
   }
 }
